--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="kotak-satu">
             <p class="p1">"</p>
             <p class="p2">
-             Membesarkan aku membutuhkan banyak kesabaran dan kekuatan. Terima kasih sudah bertahan.
+             Membesarkan aku membutuhkan banyak kesabaran dan kekuatan. Terima kasih Ibu sudah bertahan.
             </p>
             <p class="p3">"</p>
         </div>
